# testing-framework-claude

.github/workflows/: api-testing.yml  ui-testing.yml
api-testing/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
api-testing/.github/workflows/: test.yml
api-testing/config/: schemathesis.toml
api-testing/data/output/: test-state.example.json
api-testing/grafana/: dashboard.json
api-testing/hooks/: hooks.py
api-testing/mcp/schemathesis-mcp/: README.md  pyproject.toml  server.py
api-testing/reports/: pytest-results.json  run-history.json  schemathesis-results.json
api-testing/scripts/: push_metrics.py
api-testing/tests/: conftest.py
api-testing/tests/crud/: test_crud_generic.py
api-testing/tests/load/: load-influx.js  load.js
api-testing/tests/schema/: test_schema_contract.py
ui-testing/: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
ui-testing/.github/workflows/: playwright.yml
ui-testing/fixtures/: index.ts  test-state.example.json
ui-testing/helpers/: state-loader.ts
ui-testing/mcp/playwright-mcp/: README.md  server.py
ui-testing/pages/: BasePage.ts
ui-testing/tests/e2e/: README.md
ui-testing/tests/smoke/: smoke.spec.ts
