[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schemathesis-mcp"
version = "0.1.0"
description = "Servidor MCP para Schemathesis — ejecutar tests, leer fallos, analizar tendencias y cobertura"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "schemathesis>=4.0.0",
]

[project.scripts]
schemathesis-mcp = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
